update slider height to prevent jumping

--- a/app/assets/stylesheets/partials/_slider.css.sass
+++ b/app/assets/stylesheets/partials/_slider.css.sass
@@ -78,6 +78,7 @@
 .services-slides-container
   position: relative
   overflow: hidden
+  height: 620px
 
   .handle
     margin: 0
